[gd_scene load_steps=6 format=3 uid="uid://c2wmdb807f6h0"]

[ext_resource type="Script" uid="uid://rlrgbrajo754" path="res://scenes/UI/ControlUI.gd" id="1_v8dnp"]

[sub_resource type="Gradient" id="Gradient_2gh0l"]
offsets = PackedFloat32Array(0, 0.61435, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.556054, 0.556054, 0.556054, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_876e0"]
gradient = SubResource("Gradient_2gh0l")
fill_from = Vector2(0.269231, 0.0940171)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6v0m5"]
texture = SubResource("GradientTexture2D_876e0")

[sub_resource type="FontVariation" id="FontVariation_7grjg"]
variation_embolden = 0.93

[node name="ControlUI" type="Control"]
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
size_flags_horizontal = 3
script = ExtResource("1_v8dnp")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0.568627)
top_level = true
custom_minimum_size = Vector2(0, 200)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_6v0m5")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 15

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="GearLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "Gear: {}"

[node name="VelocityLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "Velocity: {}"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AcceleratingLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "Accelerating: {}"

[node name="BrakingLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "Braking: {}"

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CameraLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "Camera: {}"

[node name="ScenarioLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "Scenario: {}"

[node name="VBoxContainer4" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MutedLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "Muted: {}"

[node name="CollidedLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer/VBoxContainer4"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 14
text = "Collision: {}"

[node name="HSeparator" type="HSeparator" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_7grjg")
theme_override_font_sizes/font_size = 14
text = "Shift Gear (R)"

[node name="Label2" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_7grjg")
theme_override_font_sizes/font_size = 14
text = "Accelerate (W)"

[node name="Label3" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_7grjg")
theme_override_font_sizes/font_size = 14
text = "Scenarios (1-4)"

[node name="Label4" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_7grjg")
theme_override_font_sizes/font_size = 14
text = "Mute Alarm (M)"

[node name="Label6" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_7grjg")
theme_override_font_sizes/font_size = 14
text = "Camera (V)"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer"]
layout_mode = 2

[node name="Label3" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_7grjg")
theme_override_font_sizes/font_size = 14
text = "Brake (S)"

[node name="Label5" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_7grjg")
theme_override_font_sizes/font_size = 14
text = "Turn Right (D)"

[node name="Label6" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = SubResource("FontVariation_7grjg")
theme_override_font_sizes/font_size = 14
text = "Turn Left (A)"

[node name="VSeparator" type="VSeparator" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
follow_focus = true

[node name="ScenarioDescriptionLabel" type="Label" parent="Panel/MarginContainer/HBoxContainer/VBoxContainer/HBoxContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/font_size = 14
text = "Scenario (1): Backup normally without any collision objects."
autowrap_mode = 2

[node name="VSeparator" type="VSeparator" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="ObjectPanelContainer" type="HBoxContainer" parent="Panel/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20
alignment = 1
